--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,13 @@ h1 {
   font-size: 1.4rem;
 }
 
+h2 {
+  font-size: 1.2rem;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  color: #222f5b;
+}
+
 /* header */
 .header {
   height: 50px;
