--- a/client/src/components/Jobs/Jobs.module.css
+++ b/client/src/components/Jobs/Jobs.module.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.jobs_container {
+.jobs_container_outter {
   margin: 12px;
 }
 
@@ -57,4 +57,28 @@ a.link_icon:active {
 .small {
   font-size: 0.8rem;
   margin-top: 12px;
+}
+
+@media (min-width: 700px) {
+
+  .jobs_container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+  }
+
+  .job_container {
+    width: calc(48% - 38px);
+    margin: 12px;
+  }
+  
+}
+
+@media (min-width: 1050px) {
+
+  .job_container {
+    width: calc(31% - 48px);
+    margin: 12px;
+  }
+
 }
