--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,8 +80,6 @@ a.link_icon:active {
   font-size: 1.4rem;
 }
 
-
-
 /* list item */
 
 .list_item_container {
@@ -90,4 +88,42 @@ a.link_icon:active {
   background-color: #e5e5e5;
   border: 1px dotted #999999;
   border-radius: 8px;
+}
+
+.list_item_label {
+  margin-right: 5px;
+  font-variant: small-caps;
+}
+
+.list_item_small {
+  font-size: 0.8rem;
+  margin-top: 12px;
+}
+
+/* buttons */
+
+.button_container {
+  margin-top: 8px;
+}
+
+@media (min-width: 700px) {
+
+  .list_container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+  }
+
+  .list_item_container {
+    width: calc(48% - 38px);
+    margin: 12px;
+  }
+}
+
+@media (min-width: 1050px) {
+
+  .list_item_container {
+    width: calc(31% - 48px);
+    margin: 12px;
+  }
 }
