add 2 ways to close nav menu; close and click main section

--- a/client/src/components/Header/NavBar.module.css
+++ b/client/src/components/Header/NavBar.module.css
@@ -19,6 +19,12 @@
   text-align: center;
 }
 
+.close_icon {
+  color: #222f5b;
+  text-align: right;
+  padding: 8px 8px 0 0;
+}
+
 @media (min-width: 768px) {
 
   .nav_menu {
