58 issue menu alert (#62)
* add check to prevent dupe alert message

* update callSecureApi() so that alert triggered only on get events err

* add unique key to alerts list

* remove ability to close nav menu from main

* lintcache

* update Input comp to take nameInputRef prop for useRef hook

* update so that name input is auto-focused

* lintcache

* update prop name for inputRef so it is more generic

* lintcache

* add ButtonGroup container

* add spacing for button

* add ButtonGroup container

* add ButtonGroup to jobs form

* lintcache

* add conditional logic to return null on alert container so rest of page remains interactive

* update alert style

* lintcache

* reformat alert layout and icons

* cleanup

* lintcache

--- a/client/src/components/FormShared/Alert.module.css
+++ b/client/src/components/FormShared/Alert.module.css
@@ -3,14 +3,27 @@
   width: 90%;
   top: calc(74px + 50px);
   left: 5%;
-  min-height: 100px;
+  min-height: 200px;
   max-height: 90vh;
 }
 
 .alert_container {
+  display: grid;
+  grid-auto-rows: minmax(30px, auto);
+}
+
+.alert_header {
+  grid-row: 1;
+  font-weight: bold;
+  justify-self: end;
+}
+
+.alert_message_container {
+  grid-row: 2 / 3;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .alert {
@@ -55,13 +68,15 @@ p {
 }
 
 .icon_error {
+  margin-top: 3px;
   color: #f37971;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
 }
 
 .icon_success {
+  margin-top: 3px;
   color: #7bc043;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
 }
 
 @media (min-width: 580px) {
