--- a/client/src/components/FormShared/Input.module.css
+++ b/client/src/components/FormShared/Input.module.css
@@ -29,6 +29,13 @@
   background-color: #e8eaee;
 }
 
+.error,
+.error:visited,
+.error:hover,
+.error:focus {
+  border-color: #e68882;
+}
+
 @media (min-width: 768px) {
 
   .input {
